<resources>
    <string name="app_name">IM</string>
    <string name="action_more">more</string>
    <string name="action_menu">menu</string>
    <string name="done">done</string>
    <string name="drop">drop</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="filter_menu">filter</string>
    <string name="content_description">TODO</string>
    <string name="action_delete">delete</string>
    <string name="history">History</string>
    <string name="text">text</string>
    <string name="action_new" >new</string>
    <string name="threshold">threshold</string>
    <string name="save">save</string>
    <string name="share">share</string>
</resources>
