<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_new_draft"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/action_new"
        app:showAsAction="ifRoom">
        <menu>
            <group android:id="@+id/group_new_draft">
                <item
                    android:id="@+id/action_take_photo"
                    android:icon="@drawable/ic_camera_alt_black_24dp"
                    android:title="@string/camera"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_pick_from_gallery"
                    android:icon="@drawable/ic_photo_library_black_24dp"
                    android:title="@string/gallery"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>
</menu>